# cloudwatch_logger

./: .env.example  .gitignore  LICENSE  Makefile  README.md  consts.py  logger.py  main.py  pyproject.toml  ruff.toml  runner.py
cloudwatch_logger/: consts.py  mixins.py  runner.py
tests/: mocks.py  test_runner.py
